# PhoneFinder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: package-check-win.yml
cmake/toolchains/: mingw64.cmake
include/phonefinder/: csv_loader.hpp  hotkey_rules.hpp  pinyin.hpp  pinyin_map_generated.hpp  qt_mainwindow.hpp  search.hpp  service.hpp  settings.hpp  types.hpp  util.hpp
packaging/: qt_installer.nsi
samples/: 医院科室电话数据模板_demo.csv  医院科室电话数据模板_填写说明.md
scripts/: generate_pinyin_map.py  package_qt_cross_macos.sh  package_qt_windows.bat  win11_build_qt_installer.ps1
src/: csv_loader.cpp  hotkey_rules.cpp  main.cpp  pinyin.cpp  qt_app.manifest  qt_app.rc  qt_main.cpp  qt_mainwindow.cpp  search.cpp  service.cpp  settings.cpp
